--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 </head>
 <body>
   <h1>Trabajo Práctico: Cotización del Dólar Blue 💵</h1>
-  <p>Alumno: <b>Maxi</b></p>
+  <p>Alumno: <b>Maximo Quispe Cassaigne</b></p>
   <p>Materia: Desarrollo de Aplicaciones</p>
   <p>Para ejecutar el código, abrí el siguiente archivo:</p>
   <a href="./app.js" target="_blank">Ver código fuente (app.js)</a>
 </body>
 </html>
+
