--- a/index.html
+++ b/index.html
@@ -8,29 +8,15 @@
       font-family: Arial; 
       text-align: center; 
       margin-top: 50px; 
-
-     
-      background-image: url('https://www.pagina12.com.ar/868255-dolar-blue-dolar-hoy-a-cuanto-cotizan-el-viernes-24-de-octub');
-      background-size: cover;      
-      background-position: center; 
-      background-repeat: no-repeat; 
-      color: white;                
+      background-color: #d3d3d3; 
     }
-
     input, button { 
       padding: 10px; 
       margin: 5px; 
-      border-radius: 5px;
-      border: none;
     }
-
     #resultado { 
       margin-top: 20px; 
       font-size: 1.2em; 
-      background-color: rgba(0,0,0,0.4);
-      display: inline-block;
-      padding: 10px 20px;
-      border-radius: 8px;
     }
   </style>
 </head>
